# gsignond

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  autogen.sh  configure.ac  gsignond.conf.in  meson.build  meson_options.txt
dbus/: meson.build
dbus/interfaces/: com.google.code.AccountsSSO.gSingleSignOn.AuthService.xml
dbus/services/: com.google.code.AccountsSSO.gSingleSignOn.service.in
dists/debian/: changelog  control  copyright  gir1.2-gsignond-1.0.install  gsignond.install  libgsignond-common-dev.install  libgsignond-common0.install
dists/rpm/: gsignond-suse.spec  gsignond-tizen.changes  gsignond-tizen.spec
docs/: gsignond-docs.sgml  plugin-loaders-overview.xml
docs/reference/: building.xml  gsignond-docs.xml  meson.build  plugin-loaders-overview.xml
include/gsignond/: gsignond-access-control-manager.h  gsignond-plugin-interface.h  gsignond-secret-storage.h  gsignond-security-context.h  gsignond-session-data.h  gsignond-signonui-data.h  gsignond.h
src/: meson.build
src/common/: Makefile.am  gSignond-1.0-custom.vala  gSignond-1.0.metadata  gsignond-access-control-manager.c  gsignond-access-control-manager.h  gsignond-config.c  gsignond-config.h  gsignond-credentials.c  gsignond-credentials.h  gsignond-dictionary.c  gsignond-dictionary.h  gsignond-disposable.c  gsignond-error.c  gsignond-extension-interface.c  gsignond-extension-interface.h  gsignond-identity-info.c  gsignond-identity-info.h  gsignond-log.h  gsignond-plugin-interface.c  gsignond-plugin-interface.h  gsignond-security-context.c  gsignond-security-context.h  gsignond-session-data.c  gsignond-session-data.h  gsignond-signonui-data.c  gsignond-signonui-data.h  gsignond-storage-manager.c  gsignond-storage-manager.h  gsignond-utils.c  gsignond-utils.h  gsignond.h  gsignond.pc.in  meson.build
src/common/db/: gsignond-db-secret-database.c  gsignond-db-secret-database.h  gsignond-db-sql-database.c  gsignond-secret-storage.c  gsignond-secret-storage.h
src/daemon/: Makefile.am  gsignond-auth-session.c  gsignond-auth-session.h  gsignond-daemon.c  gsignond-daemon.h  gsignond-identity.c  gsignond-identity.h  gsignond-signonui-proxy.c  gsignond-signonui-proxy.h  main.c  meson.build
src/daemon/db/: gsignond-db-credentials-database.c  gsignond-db-credentials-database.h  gsignond-db-metadata-database.c  gsignond-db-metadata-database.h
src/daemon/dbus/: Makefile.am  gsignond-dbus-auth-service-adapter.c  gsignond-dbus-auth-service-adapter.h  gsignond-dbus-auth-session-adapter.c  gsignond-dbus-auth-session-adapter.h  gsignond-dbus-identity-adapter.c  gsignond-dbus-identity-adapter.h  gsignond-dbus-server.c  gsignond-dbus-server.h  gsignond-dbus-signonui-adapter.c  gsignond-dbus-signonui-adapter.h
src/daemon/plugins/: gsignond-plugin-proxy-factory.c  gsignond-plugin-proxy-factory.h  gsignond-plugin-proxy.c  gsignond-plugin-proxy.h  gsignond-plugin-remote-private.h  gsignond-plugin-remote.c  gsignond-plugin-remote.h
src/extensions/: Makefile.am  meson.build
src/extensions/desktop/: desktop-extension.c  desktop-extension.h  desktop-secret-storage.c  desktop-secret-storage.h  desktop-storage-manager.c  desktop-storage-manager.h  meson.build
src/extensions/ostro/: Makefile.am  meson.build  ostro-access-control-manager.c  ostro-access-control-manager.h  ostro-extension.c  ostro-extension.h  ostro-secret-storage.c  ostro-secret-storage.h  ostro-storage-manager.c  ostro-storage-manager.h
src/extensions/test/: meson.build  test-access-control-manager.h  test-extension.h  test-secret-storage.h  test-storage-manager.h
src/extensions/tizen/: meson.build  tizen-access-control-manager.c  tizen-access-control-manager.h  tizen-extension.c  tizen-extension.h  tizen-secret-storage.h  tizen-storage-manager.c  tizen-storage-manager.h
src/gplugind/: gsignond-plugin-daemon.c  gsignond-plugin-daemon.h  gsignond-plugin-loader.c  gsignond-plugin-loader.h  main.c  meson.build
src/plugins/: meson.build
src/plugins/digest/: gsignond-digest-plugin.c  gsignond-digest-plugin.h  meson.build
src/plugins/password/: gsignond-password-plugin.c  gsignond-password-plugin.h  meson.build
src/plugins/ssotest/: gsignond-ssotest-plugin.c  meson.build
test/: meson.build
test/common/: commontest.c  meson.build
test/daemon/: daemon-test.c  meson.build
test/daemon/services/: meson.build
test/db/: dbtest.c  meson.build
test/plugins/: digestplugintest.c  meson.build  passwordplugintest.c  pluginproxytest.c  pluginremotetest.c
tools/: setup-and-start-daemon.sh
