option('bus_type', type : 'combo', choices : ['system', 'session', 'p2p'], value : 'session', description : 'Specify the daemon dbus type')
option('extension', type : 'combo', choices : ['default', 'ostro', 'tizen', 'desktop'], value : 'default', description : 'Build the chosen extension')
option('enable_debug', type : 'boolean', value : false, description : 'Enable debug features')
option('enable_doc', type : 'boolean', value : true, description : 'Enable documentation generation')
option('enable_keychain', type : 'string', value : '', description : 'Enable keychain access with specified system context')
option('enable_storagedir', type : 'string', value : '/var/db', description : 'Base path for user specific storage directories')
