option('bus_type', type : 'combo', choices : ['system', 'session', 'p2p'], value : 'session', description : 'Daemon D-Bus type')
option('extension', type : 'combo', choices : ['default', 'ostro', 'tizen', 'desktop'], value : 'default', description : 'Build the chosen extension')
option('debug', type : 'boolean', value : false, description : 'Enable debug features')
option('sql_log', type : 'boolean', value : false, description : 'Enable debug features')
option('documentation', type : 'boolean', value : true, description : 'Enable documentation generation')
option('keychain', type : 'string', value : '', description : 'System context for the keychain access')
option('storagedir', type : 'string', value : '/var/db', description : 'Base path for user specific storage directories')
